<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sugaste.futsal_booking_system.LogInActivity"
    android:animateLayoutChanges="true"
    android:background="@android:color/background_light">

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLogIn"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:id="@+id/lblUsername"
        android:textStyle="normal|italic" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/lblUsername"
        android:layout_alignParentStart="true"
        android:id="@+id/txtUsername"
        android:hint="@string/username"
        android:background="?attr/colorControlHighlight"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsername"
        android:layout_alignEnd="@+id/lblUsername"
        android:layout_marginTop="25dp"
        android:id="@+id/lblPassword"
        android:textStyle="normal|italic" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/lblPassword"
        android:layout_alignParentStart="true"
        android:id="@+id/txtPassword"
        android:hint="@string/password"
        android:background="?attr/colorControlHighlight"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <Button
        android:text="@string/log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/btnLogIn"
        android:layout_below="@+id/lblForgotPassword"
        android:layout_alignParentStart="true"
        android:onClick="actionLogIn"/>

    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblForgotPassword"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:layout_alignParentEnd="true"
        android:id="@+id/lblShowPassword" />

    <Button
        android:text="@string/quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogIn"
        android:layout_centerHorizontal="true"
        android:id="@+id/button3"
        android:onClick="actionQuit"/>

    <TextView
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:id="@+id/lblLogIn"
        android:textSize="20sp"
        android:typeface="normal"
        android:textStyle="normal|bold"
        android:fontFamily="sans-serif"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
